classDiagram

    namespace EvaluationModel {

        class Scenario {
        }

        class Order {
            +quantity: int
            +earliest_start_time: int
            +latest_end_time: int
        }
        
    }

    namespace DefinitionModel {

        class ProductType {
        }

        class MachineType {
        }

        class ToolType {
            +mount_time: int
            +unmount_time: int
            +total_life_time: int
        }

        class OperationType {
            +machine_time: int
            +tool_life_time: int
        }
        
    }

    namespace SolutionModel {

        class Layout {
            +storage_in_time: int
            +storage_out_time: int
        }

        class Corridor {
            +storage_capacity: int
            +storage_in_time: int
            +storage_out_time: int
        }

        class Machine {
            +side: "left" | "right"
        }
        
    }

    OperationType "1"..>"*" ProductType: consumes
    OperationType "1"..>"*" ProductType: produces

    OperationType "1"..>"*" MachineType: uses

    OperationType "1"..>"*" ToolType: uses
    
    ProductType "1"<.."*" Order: references

    Order "*"<--o"1" Scenario: contains

    MachineType "1"<.."*" Machine: references

    Machine "* {ordered}"<--o"1" Corridor: contains

    Layout "1"o-->"*" Corridor: contains


    style OperationType fill:lightgreen,stroke:green
    style ProductType fill:lightgreen,stroke:green
    style ToolType fill:lightgreen,stroke:green
    style MachineType fill:lightgreen,stroke:green

    style Scenario fill:pink,stroke:red
    style Order fill:pink,stroke:red

    style Layout fill:lightblue,stroke:blue
    style Corridor fill:lightblue,stroke:blue
    style Machine fill:lightblue,stroke:blue